--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/ronniesong0809/demo/issues"
   },
-  "homepage": "https://github.com/ronniesong0809/demo#readme"
+  "homepage": "https://github.com/ronniesong0809/demo#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "nodemon": "^1.19.1"
+  }
 }
